<resources>
    <string name="app_name">Sigue mis huellas</string>
    <string name="button_home">Inicio</string>
    <string name="button_favorites">Favoritos</string>
    <string name="button_profile">Mi perfil</string>
    <string name="text_explore">Explorar</string>
    <string name="text_add_place">Añadir lugar</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string name="map_description">Mapa</string>
    <string name="tv_comments">Comentarios:</string>
    <string name="tv_type_place">Tipo de establecimiento</string>
    <string name="tv_name_place">Nombre del establecimiento:</string>
    <string name="btn_like">Botón Like</string>
    <string name="btn_dislike">Botón Dislike</string>
    <string name="input_hint_place_name">Nombre del establecimiento</string>
    <string name="input_hint_place_comments">Añade una reseña</string>
    <string name="btn_save">GUARDAR</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">ACEPTAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Nombre de Usuario</string>
    <string name="login">Acceder</string>
    <string name="back">Atrás</string>
    <string name="new_user">Nuevo Usuario</string>
    <string name="card_btnBuy">Comprar</string>
    <string name="btn_access">ACCEDER</string>
    <string name="btn_create">CREAR</string>
    <string name="card_btnSkip">Saltar</string>
    <string name="card_title">Restaurante</string>
    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btnSeeMore">VER MÁS</string>
    <string name="title_activity_details_place">DetailsPlaceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="username_comment">Usuario dijo:</string>
    <string name="filter_button">Filtro</string>
    <string name="list_of_places">Listado</string>
    <string name="text_distance">A 500 metros de distancia.</string>
    <string name="see_more_button">VER MÁS</string>
    <string name="filter_label">Filtrar:</string>
    <string name="list_map">Mapa</string>
    <string name="btnAddComment">NUEVA RESEÑA</string>
    <string name="tvAddCommentTitle">Añade una reseña de este lugar:</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cerrar</string>
    <string name="icon_description">Icon Description</string>
    <string name="add_place">AÑADIR UBICACIÓN</string>
    <string name="explore">EXPLORAR</string>
    <string name="confirm_password">Confirmar Password</string>
    <string name="img_title">Imagen Título</string>
</resources>