<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/logo"
            app:civ_border_color="#546E7A"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_percent="0.6"
            android:paddingTop="@dimen/min_padding"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/username"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding"
                android:layout_marginVertical="@dimen/min_padding"
                android:background="@drawable/edittext_background"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/min_padding"
                android:selectAllOnFocus="true"
                android:textColorHint="#546E7A"
                app:layout_constraintBottom_toTopOf="@id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding"
                android:layout_marginVertical="@dimen/min_padding"
                android:background="@drawable/edittext_background"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/min_padding"
                android:selectAllOnFocus="true"
                android:textColorHint="#546E7A"
                app:layout_constraintBottom_toTopOf="@id/passwordConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/passwordConfirm"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding"
                android:layout_marginVertical="@dimen/min_padding"
                android:background="@drawable/edittext_background"
                android:hint="@string/confirm_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/min_padding"
                android:selectAllOnFocus="true"
                android:textColorHint="#546E7A"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/emailSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/emailSignUp"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding"
                android:layout_marginVertical="@dimen/min_padding"
                android:background="@drawable/edittext_background"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="@dimen/min_padding"
                android:selectAllOnFocus="true"
                android:textColorHint="#546E7A"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnLogin"
                android:layout_marginBottom="@dimen/min_padding"
                app:thumbTint="@color/colorSecondaryLight"
                app:trackTint="@color/secondaryTextColor"
                app:rippleColor="@color/colorSecondaryLight"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/btn_access"
                android:textColor="@color/secondaryTextColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/logo_title"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/title_subtitle_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container2"
            android:contentDescription="@string/img_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>