<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

            <TextView
                android:id="@+id/tvAddCommentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAddCommentTitle"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/min_padding"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddCommentTitle"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.Design.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="300"
                    android:maxLines="3"
                    android:minLines="1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="@string/large_text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutLikeDislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_place_name">

                <ToggleButton
                    android:id="@+id/btnLikeCard"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_like_big"
                    android:textOn=""
                    android:textOff=""
                    android:contentDescription="@string/btn_like"
                    android:layout_margin="@dimen/min_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnDislikeCard"
                    app:layout_constraintTop_toBottomOf="@id/input_place_name"/>

                <ToggleButton
                    android:id="@+id/btnDislikeCard"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_dislike_big"
                    android:textOn=""
                    android:textOff=""
                    android:layout_margin="@dimen/min_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnLikeCard"
                    app:layout_constraintTop_toBottomOf="@id/input_place_name"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/btn_cancel"
                    android:layout_marginStart="@dimen/default_padding"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@id/layoutLikeDislike"
                    app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_accept"
                    android:layout_marginEnd="@dimen/default_padding"
                    app:layout_constraintTop_toBottomOf="@id/layoutLikeDislike"
                    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>