<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/min_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_padding">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_shopping"
            android:contentDescription="@string/icon_description"/>

        <TextView
            android:id="@+id/tvCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/input_hint_place_name"/>

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardTitle"
            tools:text="@string/text_distance"
            android:textColor="#9E9E9E"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/min_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#317f43"
            app:drawableStartCompat="@drawable/ic_like_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDistance"

            tools:text="0"/>

        <TextView
            android:id="@+id/tvDislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/min_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#a52019"
            app:drawableStartCompat="@drawable/ic_dislike_red"
            app:layout_constraintStart_toEndOf="@id/tvLikes"
            app:layout_constraintTop_toBottomOf="@id/tvDistance"
            android:layout_marginHorizontal="@dimen/default_padding"
            tools:text="0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>